--- a/ParkyAPI/appsettings.json
+++ b/ParkyAPI/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"  
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "Quo usque tandem abutere, Catilina, patientia nostra? Quam diu etiam furor iste tuus eludet? Quem ad finem sese effrenata iactabit audacia?"
+  }
 }
